--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.b3dgs.radialencapsulation</groupId>
+                <artifactId>radial-encapsulation-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>radial-encapsulation</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
